--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,19 @@ services:
       - .:/code
     ports:
       - 8000:8000
+    environment:
+      - DATABASE_NAME=postgres
+      - DATABASE_USER=postgres
+      - DATABASE_PASSWORD=postgres
+      - DATABASE_HOST=db
+      - DATABASE_PORT=5432
+    container_name: django_blog
+    restart: always
+    depends_on:
+      - db 
+  db:
+    image: postgres
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    container_name: postgres_db
